2006-10-07  Thorsten Kukuk  <kukuk@suse.de>

	* po/hu.po: Updated hungarian translation (from
	Kalman Kemenczy <kkemenczy@novell.com>)

2006-09-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/adg/Makefile.am: Add manual pages as dependency.
	* doc/mwg/Makefile.am: Likewise.
	* doc/sag/Makefile.am: Likewise.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_unix.xml.
	* doc/sag/pam_unix.xml: New.
	* modules/pam_unix/Makefile.am: Generate pam_unix.8 manual page.
	* modules/pam_unix/README.xml: New.
	* modules/pam_unix/pam_unix.8.xml: New.
	* modules/pam_unix/README: Regenerate from XML.
	* modules/pam_unix/pam_unix.8: Generated from XML.

2006-09-09  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_wheel/pam_wheel.8.xml: Fix typo.
	* modules/pam_wheel/pam_wheel.8: Likewise.
	* modules/pam_wheel/README: Likewise.

2006-09-08  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/de.po: Fix typo.

2006-09-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.6.3

2006-09-01  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_loginuid/pam_loginuid.8.xml: Fix typo in
	config name.

2006-08-31  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_env/environment: New, dummy environment example
	config file.

	* modules/pam_namespace/Makefile.am: Don't install
	manual page if we don't build module.

	* m4/ld-as-needed.m4: Don't set LDFLAGS if check failed.
	* m4/ld-O1: Likewise.

2006-08-30  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_access/pam_access.8.xml: All services supported.
	* modules/pam_access/pam_access.c (pam_sm_open_session): New.
	(pam_sm_close_session): New.
	(pam_sm_chauthtok): New.

	* modules/pam_access/pam_succeed_if.8.xml: All services supported.
	* modules/pam_access/pam_succeed_if.c (pam_sm_setcred): Return
	PAM_IGNORE rather than success.
	(pam_sm_open_session): New.
	(pam_sm_close_session): New.
	(pam_sm_chauthtok): New.

2006-08-30  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/Makefile.am: Move shell code to execute tests from here ...