@@ -7,35 +7,35 @@
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_group/pam_group.8.xml" xpointer='xpointer(//cmdsynopsis[@id = "pam_group-cmdsynopsis"]/*)'/>
   </cmdsynopsis>
-  <section>
+  <section id='sag-pam_group-description'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_group/pam_group.8.xml" xpointer='xpointer(//refsect1[@id = "pam_group-description"]/*)'/>
   </section>
-  <section>
+  <section id='sag-group.conf-description'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_group/group.conf.5.xml" xpointer='xpointer(//refsect1[@id = "group.conf-description"]/*)'/>
   </section>
-  <section>
+  <section id='sag-pam_group-options'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_group/pam_group.8.xml" xpointer='xpointer(//refsect1[@id = "pam_group-options"]/*)'/>
   </section>
-  <section>
+  <section id='sag-pam_group-services'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_group/pam_group.8.xml" xpointer='xpointer(//refsect1[@id = "pam_group-services"]/*)'/>
   </section>
-  <section>
+  <section id='sag-pam_group-return_values'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_group/pam_group.8.xml" xpointer='xpointer(//refsect1[@id = "pam_group-return_values"]/*)'/>
   </section>
-  <section>
+  <section id='sag-pam_group-files'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_group/pam_group.8.xml" xpointer='xpointer(//refsect1[@id = "pam_group-files"]/*)'/>
   </section>
-  <section>
+  <section id='sag-group.conf-examples'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_group/group.conf.5.xml" xpointer='xpointer(//refsect1[@id = "group.conf-examples"]/*)'/>
   </section>
-  <section>
+  <section id='sag-pam_group-authors'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_group/pam_group.8.xml" xpointer='xpointer(//refsect1[@id = "pam_group-authors"]/*)'/>
   </section>
