@@ -7,35 +7,35 @@
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_namespace/pam_namespace.8.xml" xpointer='xpointer(//cmdsynopsis[@id = "pam_namespace-cmdsynopsis"]/*)'/>
   </cmdsynopsis>
-  <section>
+  <section id='sag-pam_namespace-description'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_namespace/pam_namespace.8.xml" xpointer='xpointer(//refsect1[@id = "pam_namespace-description"]/*)'/>
   </section>
-  <section>
+  <section id='sag-namespace.conf-description'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_namespace/namespace.conf.5.xml" xpointer='xpointer(//refsect1[@id = "namespace.conf-description"]/*)'/>
   </section>
-  <section>
+  <section id='sag-pam_namespace-options'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_namespace/pam_namespace.8.xml" xpointer='xpointer(//refsect1[@id = "pam_namespace-options"]/*)'/>
   </section>
-  <section>
+  <section id='sag-pam_namespace-services'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_namespace/pam_namespace.8.xml" xpointer='xpointer(//refsect1[@id = "pam_namespace-services"]/*)'/>
   </section>
-  <section>
+  <section id='sag-pam_namespace-return_values'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_namespace/pam_namespace.8.xml" xpointer='xpointer(//refsect1[@id = "pam_namespace-return_values"]/*)'/>
   </section>
-  <section>
+  <section id='sag-pam_namespace-files'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_namespace/pam_namespace.8.xml" xpointer='xpointer(//refsect1[@id = "pam_namespace-files"]/*)'/>
   </section>
-  <section>
+  <section id='sag-namespace.conf-examples'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_namespace/namespace.conf.5.xml" xpointer='xpointer(//refsect1[@id = "namespace.conf-examples"]/*)'/>
   </section>
-  <section>
+  <section id='sag-pam_namespace-authors'>
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude"
      href="../../modules/pam_namespace/pam_namespace.8.xml" xpointer='xpointer(//refsect1[@id = "pam_namespace-authors"]/*)'/>
   </section>
